Assign1/changes.log
The following files have not been committed
	deleted:    changes.log
	modified:   ProjectAnalyze.sh
	modified:   error.log
	modified:   todo.log
Current git diff:

File diff: Assign1/ProjectAnalyze.sh
   205|   205| 				Diffl=$(echo "$Diffl" | sed 's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g; s/"/\&quot;/g; s/'"'"'/\&#39;/g')
   206|   206| 				echo "<span class = \"Add\">$Diffl</span> " >> "$Changelog"
   207|   207| 			else
   208|      |-				echo $Diffl >> "$Changelog"
      |   208|+				echo "$Diffl" >> "$Changelog"
   209|   209| 			fi
   210|   210| 			ANum=$(( $ANum + 1 ))
   211|   211| 			ACodeCount=$(( $ACodeCount - 1 ))
_________________________
   217|   217| 				Diffl=$(echo "$Diffl" | sed 's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g; s/"/\&quot;/g; s/'"'"'/\&#39;/g')
   218|   218| 				echo "<span class = \"Delete\">$Diffl</span>" >> "$Changelog"
   219|   219| 			else
   220|      |-				echo "$Diffl" >> Changelog
      |   220|+				echo "$Diffl" >> "$Changelog"
   221|   221| 			fi
   222|   222| 			RNum=$(( $RNum + 1 ))
   223|   223| 			RCodeCount=$(( $RCodeCount - 1 ))
_________________________
   237|   237| 			RCodeCount=$(( $RCodeCount - 1 ))
   238|   238| 			ACodeCount=$(( $ACodeCount - 1 ))
   239|   239| 		fi
   240|      |-		if [[ $Report = "False" ]];then
   241|      |-			$(echo >> "$Changelog") #to add newline
   242|      |-		fi
   243|   240| 	fi
   244|   241| 
   245|   242| done <<< $Diff
_________________________

File diff: Assign1/error.log
     1|      |-<!DOCTYPE html> <html><head><title>Haskell ErrorLog</title><style>.ZeroMP{margin:0;padding:0}.Errorbody{background-color:#CCCCCC}h3{text-align:center;text-decoration:underline}</style></head>
     2|      |-<body><div class="ZeroMP"><pre>
     3|     1| 
     4|      |-</pre></div><h3> rand.hs </h3><div class = "Errorbody"><pre>
      |     2|+File: rand.hs
     5|     3| rand.hs:1:13: error: parse error on input `->'
     6|     4|   |
     7|     5| 1 | rand = Long -> Float
     8|     6|   |             ^^
     9|      |-</pre></div></body></html>
_________________________

File diff: Assign1/todo.log
     1|     1| File: ProjectAnalyze.sh
     2|      |-  268|Todo=$(grep -rnIE ${TIgnore[@]/#/--exclude=} "//TODO|#TODO" )
      |     2|+  266|Todo=$(grep -rnIE ${TIgnore[@]/#/--exclude=} "//TODO|#TODO" )
     3|     3| File: testscript.sh
     4|     4|     6|grep -rnIE ${Something[@]/#/--exclude=} "#TODO"
